[update]全体構造の組み立て

--- a/nri/index.html
+++ b/nri/index.html
@@ -1,1 +1,132 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>NRIの強み：ビジネスモデルの特徴｜企業情報｜野村総合研究所（NRI）</title>
+</head>
+<body>
+	<header>
+		ヘッダー：NRIのロゴとナビゲーションメニューの部分
+		<h1><a href="#"><img src="" alt=""></a></h1>
+		<nav>
+			<ul>
+				<li><ナレッジ・インサイト/li>
+					ナレッジ・インサイト
+					ソリューション・サービス
+					サステナビリティ
+					ニュース
+					企業情報
+					株主・投資家情報(IR)
+					採用情報
+			</ul>
+		</nav>
+		<nav>
+			虫眼鏡・地球儀・３本線
+		</nav>
+	</header>
+	<div>
+		パンくずリスト
+	</div>
+	<div class="">
+		ページタイトル：NRIの強み、デジタルビジネス戦略、画像
+	</div>
+	<div>
+		シェア
+		つい
+		Facebook
+		リンクといん
+	</div>
+	<article>
+		記事：NRIのデジタルビジネス戦略
+			画像：DX解説画像
+		ボタン：NRIのデジタルトランスフォーメーション
+		next：人材が支えるNRI
+		prev：ビジネスモデルの特徴
+	</article>
+	<div>
+		NRIの強み
+			<div>
+				アイテム：NRIのあゆみと持続的な成長
+				アイテム：
+				アイテム：
+				アイテム：
+				アイテム：
+				アイテム：
+			</div>
+		シェア
+	</div>
+	<div>
+		サブタイトル：企業情報
+		<div>経営方針</div>
+		<div>経営方針</div>
+		<div>経営方針</div>
+		<div>経営方針</div>
+		<div>経営方針</div>
+		prev：前のページに戻る
+	</div>
+	<div>
+		Follow Us
+		ようつべ
+		Facebook
+		つい
+		リンクといん
+	</div>
+	<div>
+		サイトマップ
+			ナレッジ・インサイト
+			刊行物
+			書籍
+			コラム
+			セミナー資料
+			レポート
+			用語解説
+			ソリューション・サービス
+			マネジメントコンサルティング
+			システムコンサルティング
+			金融ITソリューション
+			産業ITソリューション
+			IT基盤サービス
+			ソリューション・製品・サービス
+			お客様事例
+			未来創発センター
+			サステナビリティ
+			サステナビリティマネジメント
+			取り組み
+			ライブラリ
+			ニュース
+			ニュースリリース
+			お知らせ
+			イベント
+			企業情報
+			社長メッセージ
+			経営方針
+			NRIの強み
+			企業案内
+			国内・海外拠点
+			株主・投資家情報（IR）
+			IRニュース
+			IRイベント
+			経営方針
+			財務・業績
+			IRライブラリ
+			株式・格付情報
+			個人投資家の皆さまへ
+			採用情報
+			メディア関係者の皆様へ
+			ビジネスパートナーの皆様へ
+			NRI JOURNAL
+			NRI People
+			NRI Voice
+			サイトマップ
+	</div>
+	<footer>
+		フッター
+		<div>
+			免責事項
+			免責条項 サイト利用規定 個人情報保護方針 個人情報の取扱いについて 情報セキュリティ対策についての宣言文 お問い合わせ アクセスマップ
+		</div>
+		<p>©コピーライト</p>
+	</footer>
+</body>
+</html>
