[update]クラス名の設定

--- a/nri/index.html
+++ b/nri/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NRIの強み：ビジネスモデルの特徴｜企業情報｜野村総合研究所（NRI）</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="NRIの強み：ビジネスモデルの特徴">
 </head>
 <body>
-	<header id="HEADER">
+	<header class="page-header wrapper">
 		<h1><a href="#"><img src="./images/logo_nri.png" alt="NRIロゴ"></a></h1>
-		<nav>
-			<ul>
+		<nav class="main-nav">
+			<ul >
 				<li>ナレッジ・インサイト</li>
 				<li>ソリューション・サービス</li>
 				<li>サステナビリティ</li>
@@ -18,218 +19,216 @@
 				<li>株主・投資家情報(IR)</li>
 				<li>採用情報</li>
 			</ul>
-		</nav>
-
-		<nav>
+		</nav><!-- /.main-nav -->
+		<nav class="sub-nav">
 			<ul>
-				<li><img src="./images/glass.svg" alt=""></li>
-				<li><img src="./images/earth.svg" alt=""></li>
+				<li><img src="./images/glass.png" alt=""></li>
+				<li><img src="./images/earth.png" alt=""></li>
 				<li><img src="./images/hamburger.png" alt=""></li>
 			</ul>
-		</nav>
-		<div>
+		</nav><!-- /.suv-nav -->
+	</header><!-- /.page-header -->
+	
+	<main>
+		<div class="breadcrumb">
 			<a href="#">NRIトップ></a> 
 			<a href="#">企業情報></a> 
 			<a href="#">NRIの強み：NRIのデジタルビジネス戦略</a> 
-		</div>
-	</header><!-- /#HEADER -->
-	<div class="page-title">
-		<p>NRIの強み</p>
-		<h1>デジタルビジネス戦略</h1>
-	</div>
+		</div><!-- /.breadcrumb -->
+	
+		<div class="page-title">
+			<p>NRIの強み</p>
+			<h1>デジタルビジネス戦略</h1>
+		</div><!-- /.page-title -->
+		<div class="wrapper">
+			<div class="share-button">
+				<ul>
+					<li>Share</li>
+					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
+				</ul>
+			</div><!-- /.share-button -->
+		
+			<article class="main-content">
+				<h2>NRIのデジタルビジネス戦略</h2>
+				<p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
+				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングと IT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
+				<img src="./images/story06_img_01.jpg" alt="DXイメージ"> 
+				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)</a> 
+				<div>
+					<a href="#">&lt;ビジネスモデルの特徴</a>	
+					<a href="#">人材が支えるNRI&gt;</a> 
+				</div>
+				<div class="sub-content">
+					<h3>NRIの強み</h3>
+					<div class="sub-content">
+						<div class="item"><a href="#">NRIのあゆみと持続的な成長</a></div>
+						<div class="item"><a href="#">問題発見から問題解決まで</a></div>
+						<div class="item"><a href="#">問題発見から問題解決まで</a></div>
+						<div class="item"><a href="#">ビジネスモデルの特徴</a></div>
+						<div class="item"><a href="#">人材が支えるNRI</a></div>
+						<div class="item"><a href="#">業界トップクラスの収益力</a></div>
+					</div>	
+				</div><!-- /.sub-content -->
+			</article><!-- /.main-content -->
+			<div class="share-button">
+				<ul>
+					<li>Share</li>
+					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
+				</ul>
+			</div><!-- /.share-button -->	
+		</div>	
 
-	<div class="share-button">
-		<ul>
-			<li>Share</li>
-			<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
-			<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
-			<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
-		</ul>
-	</div>
-
-	<article>
-		<div class="main-content">
-			<h2>NRIのデジタルビジネス戦略</h2>
-			<p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
-			<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングと IT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
-			<img src="./images/story06_img_01.jpg" alt="DXイメージ"> 
-			<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)</a> 
+		<div class="sub-menu">
+			<h2>企業情報</h2>
 			<div>
-				<a href="#">&lt;ビジネスモデルの特徴</a>	
-				<a href="#">人材が支えるNRI&gt;</a> 
+				<h3>経営方針</h3>
+				<ul>
+					<li>社長メッセージ</li>
+					<li>企業理念</li>
+					<li>経営ビジョン</li>
+					<li>品質向上・リスク管理</li>
+					<li>人材の育成</li>
+					<li>内部統制</li>
+					<li>NRIグループ企業行動原則</li>
+					<li>NRIグループビジネス行動基準</li>
+					<li>コーポレート・ガバナンス</li>
+					<li>事業等のリスク</li>
+					<li>NRIグループの調達方針</li>
+				</ul>
 			</div>
+
+			<div>
+				<h3>企業案内</h3>
+				<ul>
+					<li>会社概要</li> 
+					<li>沿革</li> 
+					<li>組織図</li> 
+					<li>役員構成</li> 
+					<li>未来創発の軌跡</li> 	
+				</ul>
+			</div>
+
 			<div>
 				<h3>NRIの強み</h3>
-				<div class="sub-content">
-					<div class="item"><a href="#">NRIのあゆみと持続的な成長</a></div>
-					<div class="item"><a href="#">問題発見から問題解決まで</a></div>
-					<div class="item"><a href="#">問題発見から問題解決まで</a></div>
-					<div class="item"><a href="#">ビジネスモデルの特徴</a></div>
-					<div class="item"><a href="#">人材が支えるNRI</a></div>
-					<div class="item"><a href="#">業界トップクラスの収益力</a></div>
-				</div>	
+				<ul>
+					<li>NRIのあゆみと持続的な成長</li>	
+					<li>問題発見から問題解決まで</li>	
+					<li>強固な顧客基盤</li>	
+					<li>ビジネスモデルの特徴</li>	
+					<li>NRIのデジタルビジネス戦略</li>	
+					<li>人材が支えるNRI</li>	
+					<li>業界トップクラスの収益力</li>	
+				</ul>
 			</div>
-		</div>
-	</article>
 
-	<div>
-		<div class="share-button">
+			<div>
+				<h3>NRIグループ国内・海外拠点一覧</h3>
+				<ul>
+					<li>メインオフィス</li> 
+					<li>グループカンパニー</li> 
+					<li>その他の関連会社・団体</li> 	
+				</ul>
+			</div>
+
+			<div>
+				<h3>事業案内</h3>
+				<ul>
+					<li>コンサルティング</li> 
+					<li>金融ITソリューション</li> 
+					<li>産業ITソリューション</li> 
+					<li>IT基盤サービス</li> 
+				</ul>
+			</div>
+
+			<a href="#">&lt;前のページに戻る</a> 
+		</div><!-- /.sub-menu -->
+	</main>
+	<footer class="wrapper">
+		<div class="follow">
 			<ul>
-				<li>Share</li>
+				<li>Follow Us</li>
+				<li><a href="#"><img src="./images/yt_icon_rgb.svg" alt="youtubeロゴ"></a></li>
 				<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
 				<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
 				<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
 			</ul>
-		</div>
-	</div>
-
-	<div class="sub-menu">
-		<h2>企業情報</h2>
-		<div>
-			<h3>経営方針</h3>
+		</div><!-- /.follow -->
+	
+		<div class="sitemap">
+			<h4>ナレッジ・インサイト</h4>
 			<ul>
-				<li>社長メッセージ</li>
-				<li>企業理念</li>
-				<li>経営ビジョン</li>
-				<li>品質向上・リスク管理</li>
-				<li>人材の育成</li>
-				<li>内部統制</li>
-				<li>NRIグループ企業行動原則</li>
-				<li>NRIグループビジネス行動基準</li>
-				<li>コーポレート・ガバナンス</li>
-				<li>事業等のリスク</li>
-				<li>NRIグループの調達方針</li>
+				<li>刊行物</li>	
+				<li>書籍</li>	
+				<li>コラム</li>	
+				<li>セミナー資料</li>	
+				<li>レポート</li>	
+				<li>用語解説</li>
 			</ul>
-		</div>
-
-		<div>
-			<h3>企業案内</h3>
+	
+			<h4>ソリューション・サービス</h4>			
 			<ul>
-				<li>会社概要</li> 
-				<li>沿革</li> 
-				<li>組織図</li> 
-				<li>役員構成</li> 
-				<li>未来創発の軌跡</li> 	
-			</ul>
-		</div>
-
-		<div>
-			<h3>NRIの強み</h3>
-			<ul>
-				<li>NRIのあゆみと持続的な成長</li>	
-				<li>問題発見から問題解決まで</li>	
-				<li>強固な顧客基盤</li>	
-				<li>ビジネスモデルの特徴</li>	
-				<li>NRIのデジタルビジネス戦略</li>	
-				<li>人材が支えるNRI</li>	
-				<li>業界トップクラスの収益力</li>	
-			</ul>
-		</div>
-
-		<div>
-			<h3>NRIグループ国内・海外拠点一覧</h3>
-			<ul>
-				<li>メインオフィス</li> 
-				<li>グループカンパニー</li> 
-				<li>その他の関連会社・団体</li> 	
-			</ul>
-		</div>
-
-		<div>
-			<h3>事業案内</h3>
-			<ul>
-				<li>コンサルティング</li> 
+				<li>マネジメントコンサルティング</li> 
+				<li>システムコンサルティング</li> 
 				<li>金融ITソリューション</li> 
 				<li>産業ITソリューション</li> 
 				<li>IT基盤サービス</li> 
-			</ul>
-		</div>
-
-		 <a href="#">&lt;前のページに戻る</a> 
-	</div>
-
-	<div class="Follow">
-		<ul>
-			<li>Follow Us</li>
-			<li><a href="#"><img src="./images/yt_icon_rgb.svg" alt="youtubeロゴ"></a></li>
-			<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
-			<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
-			<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
-		</ul>
-	</div>
-
-	<div class="sitemap">
-		<ul>
-			<h4>ナレッジ・インサイト</h4>
-			<li>刊行物</li>	
-			<li>書籍</li>	
-			<li>コラム</li>	
-			<li>セミナー資料</li>	
-			<li>レポート</li>	
-			<li>用語解説</li>
-		</ul>
-			
-		<ul>
-			<h4>ソリューション・サービス</h4>
-			<li>マネジメントコンサルティング</li> 
-			<li>システムコンサルティング</li> 
-			<li>金融ITソリューション</li> 
-			<li>産業ITソリューション</li> 
-			<li>IT基盤サービス</li> 
-			<li>ソリューション・製品・サービス</li> 
-			<li>お客様事例</li> 
-			<li>未来創発センター</li> 
-		</ul>			
-
-		<ul>
+				<li>ソリューション・製品・サービス</li> 
+				<li>お客様事例</li> 
+				<li>未来創発センター</li> 
+			</ul>			
+		
 			<h4>サステナビリティ</h4>
-			<li>サステナビリティマネジメント</li> 
-			<li>取り組み</li> 
-			<li>ライブラリ</li> 
-		</ul>
-
-		<ul>
+			<ul>
+				<li>サステナビリティマネジメント</li> 
+				<li>取り組み</li> 
+				<li>ライブラリ</li> 
+			</ul>
+	
 			<h4>ニュース</h4>
-			<li>ニュースリリース</li>
-			<li>お知らせ</li>
-			<li>イベント</li>
-		</ul>
-		
-		<ul>
+			<ul>
+				<li>ニュースリリース</li>
+				<li>お知らせ</li>
+				<li>イベント</li>
+			</ul>
+	
 			<h4>企業情報</h4>
-			<li>社長メッセージ</li>
-			<li>経営方針</li>
-			<li>NRIの強み</li>
-			<li>企業案内</li>
-			<li>国内・海外拠点</li>
-		</ul>
-			
-		<ul>
+			<ul>
+				<li>社長メッセージ</li>
+				<li>経営方針</li>
+				<li>NRIの強み</li>
+				<li>企業案内</li>
+				<li>国内・海外拠点</li>
+			</ul>
+				
 			<h4>株主・投資家情報（IR）</h4>
-			<li>IRニュース</li>
-			<li>IRイベント</li>
-			<li>経営方針</li>
-			<li>財務・業績</li>
-			<li>IRライブラリ</li>
-			<li>株式・格付情報</li>
-			<li>個人投資家の皆さまへ</li>	
-		</ul>
-		
-		<ul>
+			<ul>
+				<li>IRニュース</li>
+				<li>IRイベント</li>
+				<li>経営方針</li>
+				<li>財務・業績</li>
+				<li>IRライブラリ</li>
+				<li>株式・格付情報</li>
+				<li>個人投資家の皆さまへ</li>	
+			</ul>
+			
 			<h4>採用情報</h4>
-			<li>メディア関係者の皆様へ</li>
-			<li>ビジネスパートナーの皆様へ</li>	
-		</ul>
-		
-		<ul>
+			<ul>
+				<li>メディア関係者の皆様へ</li>
+				<li>ビジネスパートナーの皆様へ</li>	
+			</ul>
+			
 			<h4>NRI JOURNAL</h4>
-			<li>NRI People</li>
-			<li>NRI Voice</li>
-		</ul>
-		<h4>サイトマップ</h4>
-	</div>
-	<footer>
-		<div>
+			<ul>
+				<li>NRI People</li>
+				<li>NRI Voice</li>
+			</ul>
+			<h4>サイトマップ</h4>
+		</div><!-- /.sitemap -->
+		<div class="privacy">
 			<ul>
 				<li>免責条項</li>
 				<li>サイト利用規定</li>
@@ -239,7 +238,7 @@
 				<li>お問い合わせ</li>
 				<li>アクセスマップ</li>
 			</ul>
-		</div>
+		</div>		<!-- /.privacy -->
 		<p>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</p>
 	</footer>
 </body>
