[update]NRIロゴをh1からdivに修正

--- a/nri/index.html
+++ b/nri/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<header class="page-header wrapper">
-		<h1><a href="#"><img src="./images/logo_nri.png" alt="NRIロゴ"></a></h1>
+		<div>
+			<a href="#"><img src="./images/logo_nri.png" alt="NRI"></a>
+		</div>
 		<nav class="main-nav">
 			<ul >
 				<li>ナレッジ・インサイト</li>
