[update]alt属性の"ロゴ"を削除

--- a/nri/index.html
+++ b/nri/index.html
@@ -46,9 +46,9 @@
 			<div class="share-button">
 				<ul>
 					<li>Share</li>
-					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
-					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
-					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
+					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
+					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 				</ul>
 			</div><!-- /.share-button -->
 		
@@ -77,9 +77,9 @@
 			<div class="share-button">
 				<ul>
 					<li>Share</li>
-					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
-					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
-					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
+					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
+					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
+					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 				</ul>
 			</div><!-- /.share-button -->	
 		</div>	
@@ -153,10 +153,10 @@
 		<div class="follow">
 			<ul>
 				<li>Follow Us</li>
-				<li><a href="#"><img src="./images/yt_icon_rgb.svg" alt="youtubeロゴ"></a></li>
-				<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebookロゴ"></a></li>
-				<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitterロゴ"></a></li>
-				<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedinロゴ"></a></li>
+				<li><a href="#"><img src="./images/yt_icon_rgb.svg" alt="youtube"></a></li>
+				<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
+				<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
+				<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 			</ul>
 		</div><!-- /.follow -->
 	
