[update]パンくずリストの現在のページをaタグからspanタグに変更

--- a/nri/index.html
+++ b/nri/index.html
@@ -35,7 +35,7 @@
 		<div class="breadcrumb">
 			<a href="#">NRIトップ></a> 
 			<a href="#">企業情報></a> 
-			<a href="#">NRIの強み：NRIのデジタルビジネス戦略</a> 
+			<span>NRIの強み：NRIのデジタルビジネス戦略</span>>
 		</div><!-- /.breadcrumb -->
 	
 		<div class="page-title">
