[update]"share"をlistitemの外に出す

--- a/nri/index.html
+++ b/nri/index.html
@@ -45,8 +45,8 @@
 		</div><!-- /.page-title -->
 		<div class="wrapper">
 			<div class="share-button">
+				<span>Share</span>
 				<ul>
-					<li>Share</li>
 					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
 					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
 					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
@@ -76,8 +76,8 @@
 				</div><!-- /.sub-content -->
 			</article><!-- /.main-content -->
 			<div class="share-button">
+				<span>Share</span>
 				<ul>
-					<li>Share</li>
 					<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
 					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
 					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
