[update]#65-72 divタグをliタグに変更

--- a/nri/index.html
+++ b/nri/index.html
@@ -66,12 +66,14 @@
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
 					<div class="sub-content">
-						<div class="item"><a href="#">NRIのあゆみと持続的な成長</a></div>
-						<div class="item"><a href="#">問題発見から問題解決まで</a></div>
-						<div class="item"><a href="#">問題発見から問題解決まで</a></div>
-						<div class="item"><a href="#">ビジネスモデルの特徴</a></div>
-						<div class="item"><a href="#">人材が支えるNRI</a></div>
-						<div class="item"><a href="#">業界トップクラスの収益力</a></div>
+						<ul>
+							<li><a href="#">NRIのあゆみと持続的な成長</a></li>
+							<li><a href="#">問題発見から問題解決まで</a></li>
+							<li><a href="#">問題発見から問題解決まで</a></li>
+							<li><a href="#">ビジネスモデルの特徴</a></li>
+							<li><a href="#">人材が支えるNRI</a></li>
+							<li><a href="#">業界トップクラスの収益力</a></li>
+						</ul>
 					</div>	
 				</div><!-- /.sub-content -->
 			</article><!-- /.main-content -->
