[update]#161-230 ulタグをli,ulでさらに囲む

--- a/nri/index.html
+++ b/nri/index.html
@@ -164,74 +164,85 @@
 		</div><!-- /.follow -->
 	
 		<div class="sitemap">
-			<h4>ナレッジ・インサイト</h4>
 			<ul>
-				<li>刊行物</li>	
-				<li>書籍</li>	
-				<li>コラム</li>	
-				<li>セミナー資料</li>	
-				<li>レポート</li>	
-				<li>用語解説</li>
+				<li>
+					<ul>
+						<li><h4>ナレッジ・インサイト</h4></li>
+						<li>刊行物</li>
+						<li>書籍</li>
+						<li>コラム</li>
+						<li>セミナー資料</li>
+						<li>レポート</li>
+						<li>用語解説</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>ソリューション・サービス</h4></li>
+						<li>マネジメントコンサルティング</li>
+						<li>システムコンサルティング</li>
+						<li>金融ITソリューション</li>
+						<li>産業ITソリューション</li>
+						<li>IT基盤サービス</li>
+						<li>ソリューション・製品・サービス</li>
+						<li>お客様事例</li>
+						<li>未来創発センター</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>サステナビリティ</h4></li>
+						<li>サステナビリティマネジメント</li>
+						<li>取り組み</li>
+						<li>ライブラリ</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>ニュース</h4></li>
+						<li>ニュースリリース</li>
+						<li>お知らせ</li>
+						<li>イベント</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>企業情報</h4></li>
+						<li>社長メッセージ</li>
+						<li>経営方針</li>
+						<li>NRIの強み</li>
+						<li>企業案内</li>
+						<li>国内・海外拠点</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>株主・投資家情報（IR）</h4></li>
+						<li>IRニュース</li>
+						<li>IRイベント</li>
+						<li>経営方針</li>
+						<li>財務・業績</li>
+						<li>IRライブラリ</li>
+						<li>株式・格付情報</li>
+						<li>個人投資家の皆さまへ</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>採用情報</h4></li>
+						<li>メディア関係者の皆様へ</li>
+						<li>ビジネスパートナーの皆様へ</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><h4>NRI JOURNAL</h4></li>
+						<li>NRI People</li>
+						<li>NRI Voice</li>
+					</ul>
+				</li>
+				<li><h4>サイトマップ</h4></li>
 			</ul>
-	
-			<h4>ソリューション・サービス</h4>			
-			<ul>
-				<li>マネジメントコンサルティング</li> 
-				<li>システムコンサルティング</li> 
-				<li>金融ITソリューション</li> 
-				<li>産業ITソリューション</li> 
-				<li>IT基盤サービス</li> 
-				<li>ソリューション・製品・サービス</li> 
-				<li>お客様事例</li> 
-				<li>未来創発センター</li> 
-			</ul>			
-		
-			<h4>サステナビリティ</h4>
-			<ul>
-				<li>サステナビリティマネジメント</li> 
-				<li>取り組み</li> 
-				<li>ライブラリ</li> 
-			</ul>
-	
-			<h4>ニュース</h4>
-			<ul>
-				<li>ニュースリリース</li>
-				<li>お知らせ</li>
-				<li>イベント</li>
-			</ul>
-	
-			<h4>企業情報</h4>
-			<ul>
-				<li>社長メッセージ</li>
-				<li>経営方針</li>
-				<li>NRIの強み</li>
-				<li>企業案内</li>
-				<li>国内・海外拠点</li>
-			</ul>
-				
-			<h4>株主・投資家情報（IR）</h4>
-			<ul>
-				<li>IRニュース</li>
-				<li>IRイベント</li>
-				<li>経営方針</li>
-				<li>財務・業績</li>
-				<li>IRライブラリ</li>
-				<li>株式・格付情報</li>
-				<li>個人投資家の皆さまへ</li>	
-			</ul>
-			
-			<h4>採用情報</h4>
-			<ul>
-				<li>メディア関係者の皆様へ</li>
-				<li>ビジネスパートナーの皆様へ</li>	
-			</ul>
-			
-			<h4>NRI JOURNAL</h4>
-			<ul>
-				<li>NRI People</li>
-				<li>NRI Voice</li>
-			</ul>
-			<h4>サイトマップ</h4>
 		</div><!-- /.sitemap -->
 		<div class="privacy">
 			<ul>
