--- a/nri/index.html
+++ b/nri/index.html
@@ -92,60 +92,60 @@
 			<div>
 				<h3>経営方針</h3>
 				<ul>
-					<li>社長メッセージ</li>
-					<li>企業理念</li>
-					<li>経営ビジョン</li>
-					<li>品質向上・リスク管理</li>
-					<li>人材の育成</li>
-					<li>内部統制</li>
-					<li>NRIグループ企業行動原則</li>
-					<li>NRIグループビジネス行動基準</li>
-					<li>コーポレート・ガバナンス</li>
-					<li>事業等のリスク</li>
-					<li>NRIグループの調達方針</li>
+					<li><a href="#">社長メッセージ</a></li>
+					<li><a href="#">企業理念</a></li>
+					<li><a href="#">経営ビジョン</a></li>
+					<li><a href="#">品質向上・リスク管理</a></li>
+					<li><a href="#">人材の育成</a></li>
+					<li><a href="#">内部統制</a></li>
+					<li><a href="#">NRIグループ企業行動原則</a></li>
+					<li><a href="#">NRIグループビジネス行動基準</a></li>
+					<li><a href="#">コーポレート・ガバナンス</a></li>
+					<li><a href="#">事業等のリスク</a></li>
+					<li><a href="#">NRIグループの調達方針</a></li>
 				</ul>
 			</div>
 
 			<div>
 				<h3>企業案内</h3>
 				<ul>
-					<li>会社概要</li> 
-					<li>沿革</li> 
-					<li>組織図</li> 
-					<li>役員構成</li> 
-					<li>未来創発の軌跡</li> 	
+					<li><a href="#">会社概要</a></li> 
+					<li><a href="#">沿革</a></li> 
+					<li><a href="#">組織図</a></li> 
+					<li><a href="#">役員構成</a></li> 
+					<li><a href="#">未来創発の軌跡</a></li> 	
 				</ul>
 			</div>
 
 			<div>
 				<h3>NRIの強み</h3>
 				<ul>
-					<li>NRIのあゆみと持続的な成長</li>	
-					<li>問題発見から問題解決まで</li>	
-					<li>強固な顧客基盤</li>	
-					<li>ビジネスモデルの特徴</li>	
-					<li>NRIのデジタルビジネス戦略</li>	
-					<li>人材が支えるNRI</li>	
-					<li>業界トップクラスの収益力</li>	
+					<li><a href="#">NRIのあゆみと持続的な成長</a></li>	
+					<li><a href="#">問題発見から問題解決まで</a></li>	
+					<li><a href="#">強固な顧客基盤</a></li>	
+					<li><a href="#">ビジネスモデルの特徴</a></li>	
+					<li><a href="#">NRIのデジタルビジネス戦略</a></li>	
+					<li><a href="#">人材が支えるNRI</a></li>	
+					<li><a href="#">業界トップクラスの収益力</a></li>	
 				</ul>
 			</div>
 
 			<div>
 				<h3>NRIグループ国内・海外拠点一覧</h3>
 				<ul>
-					<li>メインオフィス</li> 
-					<li>グループカンパニー</li> 
-					<li>その他の関連会社・団体</li> 	
+					<li><a href="#">メインオフィス</a></li> 
+					<li><a href="#">グループカンパニー</a></li> 
+					<li><a href="#">その他の関連会社・団体</a></li> 	
 				</ul>
 			</div>
 
 			<div>
 				<h3>事業案内</h3>
 				<ul>
-					<li>コンサルティング</li> 
-					<li>金融ITソリューション</li> 
-					<li>産業ITソリューション</li> 
-					<li>IT基盤サービス</li> 
+					<li><a href="#">コンサルティング</a></li> 
+					<li><a href="#">金融ITソリューション</a></li> 
+					<li><a href="#">産業ITソリューション</a></li> 
+					<li><a href="#">IT基盤サービス</a></li> 
 				</ul>
 			</div>
 
@@ -167,92 +167,92 @@
 			<ul>
 				<li>
 					<ul>
-						<li><h4>ナレッジ・インサイト</h4></li>
-						<li>刊行物</li>
-						<li>書籍</li>
-						<li>コラム</li>
-						<li>セミナー資料</li>
-						<li>レポート</li>
-						<li>用語解説</li>
+						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
+						<li><a href="#">刊行物</a></li>
+						<li><a href="#">書籍</a></li>
+						<li><a href="#">コラム</a></li>
+						<li><a href="#">セミナー資料</a></li>
+						<li><a href="#">レポート</a></li>
+						<li><a href="#">用語解説</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>ソリューション・サービス</h4></li>
-						<li>マネジメントコンサルティング</li>
-						<li>システムコンサルティング</li>
-						<li>金融ITソリューション</li>
-						<li>産業ITソリューション</li>
-						<li>IT基盤サービス</li>
-						<li>ソリューション・製品・サービス</li>
-						<li>お客様事例</li>
-						<li>未来創発センター</li>
+						<li><a href="#"><h4>ソリューション・サービス</h4></a></li>
+						<li><a href="#">マネジメントコンサルティング</a></li>
+						<li><a href="#">システムコンサルティング</a></li>
+						<li><a href="#">金融ITソリューション</a></li>
+						<li><a href="#">産業ITソリューション</a></li>
+						<li><a href="#">IT基盤サービス</a></li>
+						<li><a href="#">ソリューション・製品・サービス</a></li>
+						<li><a href="#">お客様事例</a></li>
+						<li><a href="#">未来創発センター</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>サステナビリティ</h4></li>
-						<li>サステナビリティマネジメント</li>
-						<li>取り組み</li>
-						<li>ライブラリ</li>
+						<li><a href="#"><h4>サステナビリティ</h4></a></li>
+						<li><a href="#">サステナビリティマネジメント</a></li>
+						<li><a href="#">取り組み</a></li>
+						<li><a href="#">ライブラリ</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>ニュース</h4></li>
-						<li>ニュースリリース</li>
-						<li>お知らせ</li>
-						<li>イベント</li>
+						<li><a href="#"><h4>ニュース</h4></a></li>
+						<li><a href="#">ニュースリリース</a></li>
+						<li><a href="#">お知らせ</a></li>
+						<li><a href="#">イベント</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>企業情報</h4></li>
-						<li>社長メッセージ</li>
-						<li>経営方針</li>
-						<li>NRIの強み</li>
-						<li>企業案内</li>
-						<li>国内・海外拠点</li>
+						<li><a href="#"><h4>企業情報</h4></a></li>
+						<li><a href="#">社長メッセージ</a></li>
+						<li><a href="#">経営方針</a></li>
+						<li><a href="#">NRIの強み</a></li>
+						<li><a href="#">企業案内</a></li>
+						<li><a href="#">国内・海外拠点</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>株主・投資家情報（IR）</h4></li>
-						<li>IRニュース</li>
-						<li>IRイベント</li>
-						<li>経営方針</li>
-						<li>財務・業績</li>
-						<li>IRライブラリ</li>
-						<li>株式・格付情報</li>
-						<li>個人投資家の皆さまへ</li>
+						<li><a href="#"><h4>株主・投資家情報（IR）</h4></a></li>
+						<li><a href="#">IRニュース</a></li>
+						<li><a href="#">IRイベント</a></li>
+						<li><a href="#">経営方針</a></li>
+						<li><a href="#">財務・業績</a></li>
+						<li><a href="#">IRライブラリ</a></li>
+						<li><a href="#">株式・格付情報</a></li>
+						<li><a href="#">個人投資家の皆さまへ</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>採用情報</h4></li>
-						<li>メディア関係者の皆様へ</li>
-						<li>ビジネスパートナーの皆様へ</li>
+						<li><a href="#"><h4>採用情報</h4></a></li>
+						<li><a href="#">メディア関係者の皆様へ</a></li>
+						<li><a href="#">ビジネスパートナーの皆様へ</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><h4>NRI JOURNAL</h4></li>
-						<li>NRI People</li>
-						<li>NRI Voice</li>
+						<li><a href="#"><h4>NRI JOURNAL</h4></a></li>
+						<li><a href="#">NRI People</a></li>
+						<li><a href="#">NRI Voice</a></li>
 					</ul>
 				</li>
-				<li><h4>サイトマップ</h4></li>
+				<li><a href="#"><h4>サイトマップ</h4></a></li>
 			</ul>
 		</div><!-- /.sitemap -->
 		<div class="privacy">
 			<ul>
-				<li>免責条項</li>
-				<li>サイト利用規定</li>
-				<li>個人情報保護方針</li>
-				<li>個人情報の取扱いについて</li>
-				<li>情報セキュリティ対策についての宣言文</li>
-				<li>お問い合わせ</li>
-				<li>アクセスマップ</li>
+				<li><a href="#">免責条項</a></li>
+				<li><a href="#">サイト利用規定</a></li>
+				<li><a href="#">個人情報保護方針</a></li>
+				<li><a href="#">個人情報の取扱いについて</a></li>
+				<li><a href="#">情報セキュリティ対策についての宣言文</a></li>
+				<li><a href="#">お問い合わせ</a></li>
+				<li><a href="#">アクセスマップ</a></li>
 			</ul>
 		</div>		<!-- /.privacy -->
 		<p>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</p>
