[update]copyrightにsmallタグを追加

--- a/nri/index.html
+++ b/nri/index.html
@@ -254,8 +254,8 @@
 				<li><a href="#">お問い合わせ</a></li>
 				<li><a href="#">アクセスマップ</a></li>
 			</ul>
-		</div>		<!-- /.privacy -->
-		<p>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</p>
+		</div><!-- /.privacy -->
+		<p><small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
 	</footer>
 </body>
 </html>
