--- a/nri/index.html
+++ b/nri/index.html
@@ -41,7 +41,7 @@
 	
 		<div class="page-title">
 			<p>NRIの強み</p>
-			<h1>デジタルビジネス戦略</h1>
+			<h1>NRIのデジタルビジネス戦略</h1>
 		</div><!-- /.page-title -->
 		<div class="wrapper">
 			<div class="share-button">
