--- a/nri/index.html
+++ b/nri/index.html
@@ -35,7 +35,7 @@
 		<div class="breadcrumb">
 			<a href="#">NRIトップ></a> 
 			<a href="#">企業情報></a> 
-			<span>NRIの強み：NRIのデジタルビジネス戦略</span>>
+			<span>NRIの強み：NRIのデジタルビジネス戦略</span>
 			<img src="./images/h1_whats_2.jpg" alt="">
 		</div><!-- /.breadcrumb -->
 	
