[update]headタグ内にリセットCSSとスタイルシートへのリンクを追加

--- a/nri/index.html
+++ b/nri/index.html
@@ -5,6 +5,8 @@
 	<title>NRIの強み：ビジネスモデルの特徴｜企業情報｜野村総合研究所（NRI）</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="NRIの強み：ビジネスモデルの特徴">
+	<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+	<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
 	<header class="page-header wrapper">
