[fix]vscode整形機能で整形

--- a/nri/index.html
+++ b/nri/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
 	<meta charset="UTF-8">
 	<title>NRIの強み：ビジネスモデルの特徴｜企業情報｜野村総合研究所（NRI）</title>
@@ -8,6 +9,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 	<link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
 	<header class="page-header wrapper">
 		<div>
@@ -32,15 +34,15 @@
 			</ul>
 		</nav><!-- /.suv-nav -->
 	</header><!-- /.page-header -->
-	
+
 	<main>
 		<div class="breadcrumb">
-			<a href="#">NRIトップ></a> 
-			<a href="#">企業情報></a> 
+			<a href="#">NRIトップ></a>
+			<a href="#">企業情報></a>
 			<span>NRIの強み：NRIのデジタルビジネス戦略</span>
 			<img src="./images/h1_whats_2.jpg" alt="">
 		</div><!-- /.breadcrumb -->
-	
+
 		<div class="page-title">
 			<p>NRIの強み</p>
 			<h1>NRIのデジタルビジネス戦略</h1>
@@ -54,16 +56,16 @@
 					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 				</ul>
 			</div><!-- /.share-button -->
-		
+
 			<article class="main-content">
 				<h2>NRIのデジタルビジネス戦略</h2>
 				<p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
-				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングと IT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
-				<img src="./images/story06_img_01.jpg" alt="DXイメージ"> 
-				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)</a> 
+				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングとIT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
+				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
+				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)</a>
 				<div>
-					<a href="#">&lt;ビジネスモデルの特徴</a>	
-					<a href="#">人材が支えるNRI&gt;</a> 
+					<a href="#">&lt;ビジネスモデルの特徴</a>
+					<a href="#">人材が支えるNRI&gt;</a>
 				</div>
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
@@ -76,7 +78,7 @@
 							<li><a href="#">人材が支えるNRI</a></li>
 							<li><a href="#">業界トップクラスの収益力</a></li>
 						</ul>
-					</div>	
+					</div>
 				</div><!-- /.sub-content -->
 			</article><!-- /.main-content -->
 			<div class="share-button">
@@ -86,8 +88,8 @@
 					<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
 					<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 				</ul>
-			</div><!-- /.share-button -->	
-		</div>	
+			</div><!-- /.share-button -->
+		</div>
 
 		<div class="sub-menu">
 			<h2>企業情報</h2>
@@ -111,47 +113,47 @@
 			<div>
 				<h3>企業案内</h3>
 				<ul>
-					<li><a href="#">会社概要</a></li> 
-					<li><a href="#">沿革</a></li> 
-					<li><a href="#">組織図</a></li> 
-					<li><a href="#">役員構成</a></li> 
-					<li><a href="#">未来創発の軌跡</a></li> 	
+					<li><a href="#">会社概要</a></li>
+					<li><a href="#">沿革</a></li>
+					<li><a href="#">組織図</a></li>
+					<li><a href="#">役員構成</a></li>
+					<li><a href="#">未来創発の軌跡</a></li>
 				</ul>
 			</div>
 
 			<div>
 				<h3>NRIの強み</h3>
 				<ul>
-					<li><a href="#">NRIのあゆみと持続的な成長</a></li>	
-					<li><a href="#">問題発見から問題解決まで</a></li>	
-					<li><a href="#">強固な顧客基盤</a></li>	
-					<li><a href="#">ビジネスモデルの特徴</a></li>	
-					<li><a href="#">NRIのデジタルビジネス戦略</a></li>	
-					<li><a href="#">人材が支えるNRI</a></li>	
-					<li><a href="#">業界トップクラスの収益力</a></li>	
+					<li><a href="#">NRIのあゆみと持続的な成長</a></li>
+					<li><a href="#">問題発見から問題解決まで</a></li>
+					<li><a href="#">強固な顧客基盤</a></li>
+					<li><a href="#">ビジネスモデルの特徴</a></li>
+					<li><a href="#">NRIのデジタルビジネス戦略</a></li>
+					<li><a href="#">人材が支えるNRI</a></li>
+					<li><a href="#">業界トップクラスの収益力</a></li>
 				</ul>
 			</div>
 
 			<div>
 				<h3>NRIグループ国内・海外拠点一覧</h3>
 				<ul>
-					<li><a href="#">メインオフィス</a></li> 
-					<li><a href="#">グループカンパニー</a></li> 
-					<li><a href="#">その他の関連会社・団体</a></li> 	
+					<li><a href="#">メインオフィス</a></li>
+					<li><a href="#">グループカンパニー</a></li>
+					<li><a href="#">その他の関連会社・団体</a></li>
 				</ul>
 			</div>
 
 			<div>
 				<h3>事業案内</h3>
 				<ul>
-					<li><a href="#">コンサルティング</a></li> 
-					<li><a href="#">金融ITソリューション</a></li> 
-					<li><a href="#">産業ITソリューション</a></li> 
-					<li><a href="#">IT基盤サービス</a></li> 
+					<li><a href="#">コンサルティング</a></li>
+					<li><a href="#">金融ITソリューション</a></li>
+					<li><a href="#">産業ITソリューション</a></li>
+					<li><a href="#">IT基盤サービス</a></li>
 				</ul>
 			</div>
 
-			<a href="#">&lt;前のページに戻る</a> 
+			<a href="#">&lt;前のページに戻る</a>
 		</div><!-- /.sub-menu -->
 	</main>
 	<footer class="wrapper">
@@ -164,12 +166,14 @@
 				<li><a href="#"><img src="./images/icon-linkedin.svg" alt="linkedin"></a></li>
 			</ul>
 		</div><!-- /.follow -->
-	
+
 		<div class="sitemap">
 			<ul>
 				<li>
 					<ul>
-						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
+						<li><a href="#">
+								<h4>ナレッジ・インサイト</h4>
+							</a></li>
 						<li><a href="#">刊行物</a></li>
 						<li><a href="#">書籍</a></li>
 						<li><a href="#">コラム</a></li>
@@ -180,7 +184,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>ソリューション・サービス</h4></a></li>
+						<li><a href="#">
+								<h4>ソリューション・サービス</h4>
+							</a></li>
 						<li><a href="#">マネジメントコンサルティング</a></li>
 						<li><a href="#">システムコンサルティング</a></li>
 						<li><a href="#">金融ITソリューション</a></li>
@@ -193,7 +199,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>サステナビリティ</h4></a></li>
+						<li><a href="#">
+								<h4>サステナビリティ</h4>
+							</a></li>
 						<li><a href="#">サステナビリティマネジメント</a></li>
 						<li><a href="#">取り組み</a></li>
 						<li><a href="#">ライブラリ</a></li>
@@ -201,7 +209,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>ニュース</h4></a></li>
+						<li><a href="#">
+								<h4>ニュース</h4>
+							</a></li>
 						<li><a href="#">ニュースリリース</a></li>
 						<li><a href="#">お知らせ</a></li>
 						<li><a href="#">イベント</a></li>
@@ -209,7 +219,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>企業情報</h4></a></li>
+						<li><a href="#">
+								<h4>企業情報</h4>
+							</a></li>
 						<li><a href="#">社長メッセージ</a></li>
 						<li><a href="#">経営方針</a></li>
 						<li><a href="#">NRIの強み</a></li>
@@ -219,7 +231,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>株主・投資家情報（IR）</h4></a></li>
+						<li><a href="#">
+								<h4>株主・投資家情報（IR）</h4>
+							</a></li>
 						<li><a href="#">IRニュース</a></li>
 						<li><a href="#">IRイベント</a></li>
 						<li><a href="#">経営方針</a></li>
@@ -231,19 +245,25 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>採用情報</h4></a></li>
+						<li><a href="#">
+								<h4>採用情報</h4>
+							</a></li>
 						<li><a href="#">メディア関係者の皆様へ</a></li>
 						<li><a href="#">ビジネスパートナーの皆様へ</a></li>
 					</ul>
 				</li>
 				<li>
 					<ul>
-						<li><a href="#"><h4>NRI JOURNAL</h4></a></li>
+						<li><a href="#">
+								<h4>NRI JOURNAL</h4>
+							</a></li>
 						<li><a href="#">NRI People</a></li>
 						<li><a href="#">NRI Voice</a></li>
 					</ul>
 				</li>
-				<li><a href="#"><h4>サイトマップ</h4></a></li>
+				<li><a href="#">
+						<h4>サイトマップ</h4>
+					</a></li>
 			</ul>
 		</div><!-- /.sitemap -->
 		<div class="privacy">
@@ -260,4 +280,5 @@
 		<p><small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
 	</footer>
 </body>
+
 </html>
