--- a/nri/index.html
+++ b/nri/index.html
@@ -28,9 +28,9 @@
 		</nav><!-- /.main-nav -->
 		<nav class="sub-nav">
 			<ul>
-				<li><img src="./images/glass.png" alt=""></li>
-				<li><img src="./images/earth.png" alt=""></li>
-				<li><img src="./images/hamburger.png" alt=""></li>
+				<li><img src="./images/glass.png" alt="search"></li>
+				<li><img src="./images/earth.png" alt="language"></li>
+				<li><img src="./images/hamburger.png" alt="menu"></li>
 			</ul>
 		</nav><!-- /.suv-nav -->
 	</header><!-- /.page-header -->
@@ -40,7 +40,7 @@
 			<a href="#">NRIトップ></a>
 			<a href="#">企業情報></a>
 			<span>NRIの強み：NRIのデジタルビジネス戦略</span>
-			<img src="./images/h1_whats_2.jpg" alt="">
+			<img src="./images/h1_whats_2.jpg" alt="background-image">
 		</div><!-- /.breadcrumb -->
 
 		<div class="page-title">
