[fix]パンくずリストをdivタグからulタグに変更

--- a/nri/index.html
+++ b/nri/index.html
@@ -36,11 +36,11 @@
 	</header><!-- /.page-header -->
 
 	<main>
-		<div class="breadcrumb">
-			<a href="#">NRIトップ></a>
-			<a href="#">企業情報></a>
-			<span>NRIの強み：NRIのデジタルビジネス戦略</span>
-		</div><!-- /.breadcrumb -->
+		<ul class="breadcrumb">
+			<li><a href="#">NRIトップ></a></li>
+			<li><a href="#">企業情報></a></li>
+			<li><span>NRIの強み：NRIのデジタルビジネス戦略</span></li>
+		</ul><!-- /.breadcrumb -->
 
 		<div class="page-title">
 			<p>NRIの強み</p>
