--- a/nri/index.html
+++ b/nri/index.html
@@ -62,7 +62,7 @@
 				<p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
 				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングとIT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
-				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)</a>
+				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
 				<div>
 					<a href="#">&lt;ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI&gt;</a>
@@ -248,8 +248,8 @@
 						<li><a href="#">
 								<h4>採用情報</h4>
 							</a></li>
-						<li><a href="#">メディア関係者の皆様へ</a></li>
-						<li><a href="#">ビジネスパートナーの皆様へ</a></li>
+						<li><a href="#"><h4>メディア関係者の皆様へ</h4></a></li>
+						<li><a href="#"><h4>ビジネスパートナーの皆様へ</h4></a></li>
 					</ul>
 				</li>
 				<li>
