[fix]サイトマップクラスの一部にh4タグを追加（採用情報~NRI voiceまで）

--- a/nri/index.html
+++ b/nri/index.html
@@ -60,7 +60,8 @@
 			<article class="main-content">
 				<h2>NRIのデジタルビジネス戦略</h2>
 				<p>NRI では、企業の DX に向けた取り組みについて、既存ビジネスの業務プロセス変革に寄与する DX を「DX1.0」、デジタルで新しいビジネスモデルそのものを生み出す DX を「DX2.0」と定義しています。</p>
-				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI は、コンサルティングとIT ソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
+				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI
+					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
 				<div>
@@ -248,8 +249,12 @@
 						<li><a href="#">
 								<h4>採用情報</h4>
 							</a></li>
-						<li><a href="#"><h4>メディア関係者の皆様へ</h4></a></li>
-						<li><a href="#"><h4>ビジネスパートナーの皆様へ</h4></a></li>
+						<li><a href="#">
+								<h4>メディア関係者の皆様へ</h4>
+							</a></li>
+						<li><a href="#">
+								<h4>ビジネスパートナーの皆様へ</h4>
+							</a></li>
 					</ul>
 				</li>
 				<li>
@@ -257,8 +262,12 @@
 						<li><a href="#">
 								<h4>NRI JOURNAL</h4>
 							</a></li>
-						<li><a href="#">NRI People</a></li>
-						<li><a href="#">NRI Voice</a></li>
+						<li><a href="#">
+								<h4>NRI People</h4>
+							</a></li>
+						<li><a href="#">
+								<h4>NRI Voice</h4>
+							</a></li>
 					</ul>
 				</li>
 				<li><a href="#">
