[update]followクラス内"Follow Us"をulタグの外に移動し、spanタグ付与。

--- a/nri/index.html
+++ b/nri/index.html
@@ -159,8 +159,8 @@
 	</main>
 	<footer class="wrapper">
 		<div class="follow">
+			<span>Follow Us</span>
 			<ul>
-				<li>Follow Us</li>
 				<li><a href="#"><img src="./images/yt_icon_rgb.svg" alt="youtube"></a></li>
 				<li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a></li>
 				<li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
