--- a/nri/index.html
+++ b/nri/index.html
@@ -64,7 +64,7 @@
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
-				<div>
+				<div class="pagenation">
 					<a href="#">&lt;ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI&gt;</a>
 				</div>
