[update]sitemap-listクラスの追加

--- a/nri/index.html
+++ b/nri/index.html
@@ -169,7 +169,7 @@
 		</div><!-- /.follow -->
 
 		<div class="sitemap">
-			<ul>
+			<ul class="sitemap-list">
 				<li>
 					<ul>
 						<li><a href="#">
