[fix]無駄な改行の削除

--- a/nri/index.html
+++ b/nri/index.html
@@ -172,9 +172,7 @@
 			<ul class="sitemap-list">
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>ナレッジ・インサイト</h4>
-							</a></li>
+						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
 						<li><a href="#">刊行物</a></li>
 						<li><a href="#">書籍</a></li>
 						<li><a href="#">コラム</a></li>
@@ -185,9 +183,7 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>ソリューション・サービス</h4>
-							</a></li>
+						<li><a href="#"><h4>ソリューション・サービス</h4></a></li>
 						<li><a href="#">マネジメントコンサルティング</a></li>
 						<li><a href="#">システムコンサルティング</a></li>
 						<li><a href="#">金融ITソリューション</a></li>
@@ -200,9 +196,7 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>サステナビリティ</h4>
-							</a></li>
+						<li><a href="#"><h4>サステナビリティ</h4></a></li>
 						<li><a href="#">サステナビリティマネジメント</a></li>
 						<li><a href="#">取り組み</a></li>
 						<li><a href="#">ライブラリ</a></li>
@@ -210,9 +204,7 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>ニュース</h4>
-							</a></li>
+						<li><a href="#"><h4>ニュース</h4></a></li>
 						<li><a href="#">ニュースリリース</a></li>
 						<li><a href="#">お知らせ</a></li>
 						<li><a href="#">イベント</a></li>
@@ -220,9 +212,7 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>企業情報</h4>
-							</a></li>
+						<li><a href="#"><h4>企業情報</h4></a></li>
 						<li><a href="#">社長メッセージ</a></li>
 						<li><a href="#">経営方針</a></li>
 						<li><a href="#">NRIの強み</a></li>
@@ -232,9 +222,7 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>株主・投資家情報（IR）</h4>
-							</a></li>
+						<li><a href="#"><h4>株主・投資家情報（IR）</h4></a></li>
 						<li><a href="#">IRニュース</a></li>
 						<li><a href="#">IRイベント</a></li>
 						<li><a href="#">経営方針</a></li>
@@ -246,15 +234,9 @@
 				</li>
 				<li>
 					<ul>
-						<li><a href="#">
-								<h4>採用情報</h4>
-							</a></li>
-						<li><a href="#">
-								<h4>メディア関係者の皆様へ</h4>
-							</a></li>
-						<li><a href="#">
-								<h4>ビジネスパートナーの皆様へ</h4>
-							</a></li>
+						<li><a href="#"><h4>採用情報</h4></a></li>
+						<li><a href="#"><h4>メディア関係者の皆様へ</h4></a></li>
+						<li><a href="#"><h4>ビジネスパートナーの皆様へ</h4></a></li>
 					</ul>
 				</li>
 				<li>
@@ -270,9 +252,7 @@
 							</a></li>
 					</ul>
 				</li>
-				<li><a href="#">
-						<h4>サイトマップ</h4>
-					</a></li>
+				<li><a href="#"><h4>サイトマップ</h4></a></li>
 			</ul>
 		</div><!-- /.sitemap -->
 		<div class="privacy">
