[fix]main,footerタグからwrapperクラスをを削除

--- a/nri/index.html
+++ b/nri/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header class="page-header wrapper">
+	<header class="page-header">
 		<div>
 			<a href="#"><img src="./images/logo_nri.png" alt="NRI"></a>
 		</div>
@@ -157,7 +157,7 @@
 			<a href="#">&lt;前のページに戻る</a>
 		</div><!-- /.sub-menu -->
 	</main>
-	<footer class="wrapper">
+	<footer>
 		<div class="follow">
 			<span>Follow Us</span>
 			<ul>
