[fix]html#58 main-wrapperクラスの追加

--- a/nri/index.html
+++ b/nri/index.html
@@ -47,7 +47,7 @@
 			<h1>NRIのデジタルビジネス戦略</h1>
 			<!-- <img src="./images/h1_whats_2.jpg" alt="background-image"> -->
 		</div><!-- /.page-title -->
-		<div class="wrapper">
+		<div class="main-wrapper">
 			<div class="share-button">
 				<span>Share</span>
 				<ul>
@@ -153,8 +153,7 @@
 					<li><a href="#">IT基盤サービス</a></li>
 				</ul>
 			</div>
-
-			<a href="#">&lt;前のページに戻る</a>
+			<a href="#" class="pagenation">&lt;前のページに戻る</a></div>
 		</div><!-- /.sub-menu -->
 	</main>
 	<footer>
@@ -265,8 +264,8 @@
 				<li><a href="#">お問い合わせ</a></li>
 				<li><a href="#">アクセスマップ</a></li>
 			</ul>
+			<p><small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
 		</div><!-- /.privacy -->
-		<p><small>Copyright(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
 	</footer>
 </body>
 
