[fix]pdfのDLボタンのテキストに<br>を追加

--- a/nri/index.html
+++ b/nri/index.html
@@ -63,7 +63,7 @@
 				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
-				<a href="#" class="button">NRIのデジタルトランスフォーメーション(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
+				<a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
 				<div class="pagenation">
 					<a href="#">&lt;ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI&gt;</a>
