[update]berforeクラスを追加し:before擬似クラスで要素に">"を付加

--- a/nri/index.html
+++ b/nri/index.html
@@ -63,7 +63,7 @@
 				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
-				<a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a>
+				<div class="before"><a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
 				<div class="pagenation">
 					<a href="#">&lt;ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI&gt;</a>
@@ -71,7 +71,7 @@
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
 					<div class="sub-content">
-						<ul>
+						<ul class="before">
 							<li><a href="#">NRIのあゆみと持続的な成長</a></li>
 							<li><a href="#">問題発見から問題解決まで</a></li>
 							<li><a href="#">問題発見から問題解決まで</a></li>
@@ -96,7 +96,7 @@
 			<h2>企業情報</h2>
 			<div>
 				<h3>経営方針</h3>
-				<ul>
+				<ul class="before">
 					<li><a href="#">社長メッセージ</a></li>
 					<li><a href="#">企業理念</a></li>
 					<li><a href="#">経営ビジョン</a></li>
@@ -113,7 +113,7 @@
 
 			<div>
 				<h3>企業案内</h3>
-				<ul>
+				<ul class="before">
 					<li><a href="#">会社概要</a></li>
 					<li><a href="#">沿革</a></li>
 					<li><a href="#">組織図</a></li>
@@ -124,7 +124,7 @@
 
 			<div>
 				<h3>NRIの強み</h3>
-				<ul>
+				<ul class="before">
 					<li><a href="#">NRIのあゆみと持続的な成長</a></li>
 					<li><a href="#">問題発見から問題解決まで</a></li>
 					<li><a href="#">強固な顧客基盤</a></li>
@@ -137,7 +137,7 @@
 
 			<div>
 				<h3>NRIグループ国内・海外拠点一覧</h3>
-				<ul>
+				<ul class="before">
 					<li><a href="#">メインオフィス</a></li>
 					<li><a href="#">グループカンパニー</a></li>
 					<li><a href="#">その他の関連会社・団体</a></li>
@@ -146,7 +146,7 @@
 
 			<div>
 				<h3>事業案内</h3>
-				<ul>
+				<ul class="before">
 					<li><a href="#">コンサルティング</a></li>
 					<li><a href="#">金融ITソリューション</a></li>
 					<li><a href="#">産業ITソリューション</a></li>
@@ -168,7 +168,7 @@
 		</div><!-- /.follow -->
 
 		<div class="sitemap">
-			<ul class="sitemap-list">
+			<ul class="sitemap-list before">
 				<li>
 					<ul>
 						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
