--- a/nri/index.html
+++ b/nri/index.html
@@ -64,7 +64,7 @@
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
 				<div class="before fade"><a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
-				<div class="pagenation">
+				<div class="pagenation hover-underline">
 					<a href="#">&lt;ビジネスモデルの特徴</a>
 					<a href="#">人材が支えるNRI&gt;</a>
 				</div>
@@ -92,7 +92,7 @@
 			</div><!-- /.share-button -->
 		</div>
 
-		<div class="sub-menu">
+		<div class="sub-menu hover-underline">
 			<h2>企業情報</h2>
 			<div>
 				<h3>経営方針</h3>
@@ -153,7 +153,7 @@
 					<li><a href="#">IT基盤サービス</a></li>
 				</ul>
 			</div>
-			<a href="#" class="pagenation">&lt;前のページに戻る</a></div>
+			<a href="#" class="pagenation hover-underline">&lt;前のページに戻る</a></div>
 		</div><!-- /.sub-menu -->
 	</main>
 	<footer>
@@ -168,7 +168,7 @@
 		</div><!-- /.follow -->
 
 		<div class="sitemap">
-			<ul class="sitemap-list before">
+			<ul class="sitemap-list before hover-underline">
 				<li>
 					<ul>
 						<li><a href="#"><h4>ナレッジ・インサイト</h4></a></li>
@@ -254,7 +254,7 @@
 				<li><a href="#"><h4>サイトマップ</h4></a></li>
 			</ul>
 		</div><!-- /.sitemap -->
-		<div class="privacy">
+		<div class="privacy hover-underline">
 			<ul>
 				<li><a href="#">免責条項</a></li>
 				<li><a href="#">サイト利用規定</a></li>
