[fix]メニューアイコンの修正

--- a/nri/index.html
+++ b/nri/index.html
@@ -26,11 +26,11 @@
 				<li><a href="#">採用情報</a></li>
 			</ul>
 		</nav><!-- /.main-nav -->
-		<nav class="sub-nav">
+		<nav class="sub-nav fade">
 			<ul>
-				<li><img src="./images/glass.png" alt="search"></li>
-				<li><img src="./images/earth.png" alt="language"></li>
-				<li><img src="./images/hamburger.png" alt="menu"></li>
+				<li><img src="./images/glass.svg" alt="search"></li>
+				<li><img src="./images/earth.svg" alt="language"></li>
+				<li><img src="./images/hamburger.svg" alt="menu"></li>
 			</ul>
 		</nav><!-- /.suv-nav -->
 	</header><!-- /.page-header -->
