--- a/nri/index.html
+++ b/nri/index.html
@@ -62,10 +62,11 @@
 				<p>DX を実現するためには、業務プロセス変革やビジネスモデル創造、そして、それらを実現する IT を同時並行で、共に議論しながら、かつ、スピーディーに実装できる戦略パートナーが必要です。NRI
 					は、コンサルティングとITソリューションの人材と機能を併せ持ち、お客さまと併走し、お客さまと仮説検証を繰り返しながらビジネスを創出する「コンソリューション」の提供を強みとして、DX の実現を推進します。</p>
 				<img src="./images/story06_img_01.jpg" alt="DXイメージ">
-				<div class="before fade"><a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
+				<div class="before fade">
+					<a href="#" class="button">NRIのデジタルトランスフォーメーション<br>(7.43MB)<img src="./images/icon_PDF.png" alt="PDF"> </a></div>
 				<div class="pagenation hover-underline">
-					<a href="#">&lt;ビジネスモデルの特徴</a>
-					<a href="#">人材が支えるNRI&gt;</a>
+					<a href="#">&lt;<span>ビジネスモデルの特徴</span></a>
+					<a href="#"><span>人材が支えるNRI</span>&gt;</a>
 				</div>
 				<div class="sub-content">
 					<h3>NRIの強み</h3>
@@ -152,10 +153,11 @@
 					<li><a href="#">IT基盤サービス</a></li>
 				</ul>
 			</div>
-			<a href="#" class="pagenation hover-underline">&lt;前のページに戻る</a></div>
+			 <div class="pagenation">
+				<a href="#" class="hover-underline">&lt;前のページに戻る</a>
+			 </div>
+		</div>
 		</div><!-- /.sub-menu -->
-	</main>
-	<footer>
 		<div class="follow">
 			<span>Follow Us</span>
 			<ul>
@@ -253,6 +255,9 @@
 				<li><a href="#"><h4>サイトマップ</h4></a></li>
 			</ul>
 		</div><!-- /.sitemap -->
+
+	</main>
+	<footer>
 		<div class="privacy hover-underline">
 			<ul>
 				<li><a href="#">免責条項</a></li>
